--- a/src/index.scss
+++ b/src/index.scss
@@ -43,4 +43,11 @@ svg {
       border: thin solid rgb(146, 146, 146);
     }
   }
+
+  .form-error {
+    color: rgb(224, 26, 26);
+    font-size: 13px;
+    margin-top: -5px;
+    margin-bottom: 10px;
+  }
 }
