--- a/src/components/LoginForm/style.scss
+++ b/src/components/LoginForm/style.scss
@@ -1,5 +1,6 @@
 .login-container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   margin-top: 35px;
@@ -13,4 +14,11 @@
   box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 10px 5px,
     rgba(0, 0, 0, 0.14) 0px 1px 1px 0px, rgba(0, 0, 0, 0.12) 0px 1px 3px 0px;
   max-width: 350px;
+}
+
+.info-login {
+  background-color: #fff;
+  padding: 10px;
+  border-radius: 8px;
+  margin-top: 15px;
 }
